<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textInsert1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextInsertF"
        android:text="@string/textInsertF"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsertF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextInsertF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Podaj wartość F"
        android:inputType="text"
        android:text="@string/oneValue"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextInsertR"
        android:text="@string/labelInsertR"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsertR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsertF" />

    <EditText
        android:id="@+id/editTextInsertR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Podaj wartość R"
        android:inputType="text"
        android:text="@string/oneValue"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextInsertH"
        android:text="@string/labelInsertH"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsertH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsertR" />

    <EditText
        android:id="@+id/editTextInsertH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Podaj wartość H"
        android:inputType="text"
        android:text="@string/oneValue"
        app:layout_constraintBottom_toTopOf="@+id/buttonInsertOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonInsertOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/labelInsertBtOk"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonInsertCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsertH" />

    <Button
        android:id="@+id/buttonInsertCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/labelInsertBtCan"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsertOK" />
</androidx.constraintlayout.widget.ConstraintLayout>