<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/label1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/plate1" />

    <TextView
        android:id="@+id/textF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/emptySting"
        app:layout_constraintBottom_toTopOf="@+id/textH"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/emptySting"
        app:layout_constraintBottom_toTopOf="@+id/buttonSet"
        app:layout_constraintTop_toBottomOf="@+id/textH" />

    <TextView
        android:id="@+id/textH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/emptySting"
        app:layout_constraintBottom_toTopOf="@+id/textR"
        app:layout_constraintTop_toBottomOf="@+id/textF" />

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button1Text"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textUmax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textR" />

    <TextView
        android:id="@+id/textSigma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="285dp"
        android:text="@string/emptySting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUmax" />

    <TextView
        android:id="@+id/textUmax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/emptySting"
        app:layout_constraintBottom_toTopOf="@+id/textSigma"
        app:layout_constraintTop_toBottomOf="@+id/buttonSet" />

</androidx.constraintlayout.widget.ConstraintLayout>